samples/_failures_safe/1761443110_79dd80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3a8556a.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_d3a8556a.c:187:12: error: missing terminating " character
  187 |     printf("Dijkstra distances from vertex %
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d3a8556a.c:187:5: error: expected expression at end of input
  187 |     printf("Dijkstra distances from vertex %
      |     ^~~~~~
./samples/SAFE/__tmp_d3a8556a.c:187:5: error: expected declaration or statement at end of input
